--- a/tugas1/home.html
+++ b/tugas1/home.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <header>
-    <h1>Header</h1>
-    <p>Ini adalah header halaman utama</p>
+    <h1>TUGAS DDAP</h1>
+    <p>Ini adalah Tugas DDAP yang dikerjakan oleh ARIFA MAHARANI SALSABIL</p>
   </header>
   
   <nav>
